--- a/gobotany/static/sass/_home.scss
+++ b/gobotany/static/sass/_home.scss
@@ -32,7 +32,7 @@
                     }
                 }
                 a:hover {
-                    @include highlight-global-nav-home;
+                    text-decoration: none;
                 }
             }
         }
