--- a/gobotany/site/templates/concord/_sidebar_items.html
+++ b/gobotany/site/templates/concord/_sidebar_items.html
@@ -1,5 +1,5 @@
                     <div class="section">
-                        <h4>Concord sample sidebar items</h4>
+                        <h4>Partner sample sidebar items</h4>
                         <p>This is from an overridden template.</p>
                     </div>
 
