--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -978,6 +978,7 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results .working-area h4 { font-size: 13px; margin: 2px 0; width: auto; }
   body.skey.results .working-area .info { height: 100%; }
   body.skey.results .working-area .info .hint p { font-size: 11px; margin-bottom: 10px; }
+  body.skey.results .working-area .character-drawing img { max-height: 100px; }
   body.skey.results .working-area .values { height: 60%; margin-bottom: 10px; }
   body.skey.results .working-area .choices, body.skey.results .working-area .row, body.skey.results .working-area .choice { display: block; }
   body.skey.results .working-area .choices { background: #fff; border: 1px solid #999999; border-radius: 8px; border-spacing: 0; height: 100%; margin-bottom: 6px; overflow-x: hidden; overflow-y: auto; position: fixed; width: 100%; -webkit-overflow-scrolling: touch; }
@@ -989,13 +990,13 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results .working-area .choices.has-drawings .choice:first-of-type .drawing { border-top-left-radius: 8px; }
   body.skey.results .working-area .choices.has-drawings .choice:last-of-type .drawing { border-bottom-left-radius: 8px; }
   body.skey.results .working-area .choice { border-bottom: 1px solid #999999; margin: 0; height: 44px; position: relative; }
+  body.skey.results .working-area .choice input { margin: 4px 0; opacity: 0; position: absolute; }
   body.skey.results .working-area .choice label { /*border-left: 1px solid orange;*/ /*border-right: 1px solid orange;*/ display: table; font-family: Verdana, sans-serif; /* No Tahoma on iOS */ font-size: 11px; height: 44px; margin: 0; max-width: none; min-width: none; padding-left: 4px; padding-right: 12px; width: 96%; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
   body.skey.results .working-area .row:first-of-type .choice:first-of-type { border-top: none; }
   body.skey.results .working-area .checked { background: #eef2e9 url(/static/images/layout/check.png) no-repeat; background-size: auto 20px; background-position: 98% center; }
   body.skey.results .working-area .row:first-of-type .checked:first-of-type { border-top-left-radius: 8px; border-top-right-radius: 8px; }
   body.skey.results .working-area .row:last-of-type .checked:last-of-type { border-bottom-left-radius: 8px; border-bottom-right-radius: 8px; }
   body.skey.results .working-area .choice-label { display: table-cell; vertical-align: middle; }
-  body.skey.results .working-area input { margin: 4px 0; opacity: 0; position: absolute; }
   body.skey.results .working-area .actions { bottom: 0; height: 50px; position: fixed; width: 100%; }
   body.skey.results .modal-wrap .inner { /* More Questions dialog */ }
   body.skey.results .modal-wrap .inner h4.heading { font-size: 13px; padding-left: 10px; padding-right: 10px; padding-top: 8px; }
@@ -1007,10 +1008,10 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results.mobile-wide #question-nav { margin: 25px 8px 12px; width: 95%; /* end .option-list */ }
   body.skey.results.mobile-wide #question-nav.closed { background: none; border: 0; min-height: 0; }
   body.skey.results.mobile-wide #question-nav.closed div:not([class="section instructions"]) { display: none; }
-  body.skey.results.mobile-wide #question-nav.closed .instructions { border-radius: 18px; }
-  body.skey.results.mobile-wide #question-nav.closed .instructions h5::after { right: 12px; top: 10px; -webkit-transform: rotate(135deg); -moz-transform: rotate(135deg); -ms-transform: rotate(135deg); -o-transform: rotate(135deg); transform: rotate(135deg); }
-  body.skey.results.mobile-wide #question-nav .instructions { background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #dc9402), color-stop(40%, #f0b448), color-stop(100%, #dc9402)); background: -webkit-linear-gradient(top, #dc9402 0%, #f0b448 40%, #dc9402 100%); background: -moz-linear-gradient(top, #dc9402 0%, #f0b448 40%, #dc9402 100%); background: -o-linear-gradient(top, #dc9402 0%, #f0b448 40%, #dc9402 100%); background: linear-gradient(top, #dc9402 0%, #f0b448 40%, #dc9402 100%); -webkit-box-shadow: 0px 1px 4px #a2a64d; -moz-box-shadow: 0px 1px 4px #a2a64d; box-shadow: 0px 1px 4px #a2a64d; border-radius: 0; cursor: pointer; position: relative; }
-  body.skey.results.mobile-wide #question-nav .instructions h5::after { border-color: #fff; border-style: solid; border-width: 3px 3px 0 0; color: #fff; content: " \a0"; display: inline-block; height: 9px; position: absolute; right: 12px; top: 15px; vertical-align: middle; width: 9px; -webkit-transform: rotate(-45deg); -moz-transform: rotate(-45deg); -ms-transform: rotate(-45deg); -o-transform: rotate(-45deg); transform: rotate(-45deg); }
+  body.skey.results.mobile-wide #question-nav.closed > .instructions { border-radius: 18px; }
+  body.skey.results.mobile-wide #question-nav.closed > .instructions h5::after { right: 12px; top: 10px; -webkit-transform: rotate(135deg); -moz-transform: rotate(135deg); -ms-transform: rotate(135deg); -o-transform: rotate(135deg); transform: rotate(135deg); }
+  body.skey.results.mobile-wide #question-nav > .instructions { background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #dc9402), color-stop(40%, #f0b448), color-stop(100%, #dc9402)); background: -webkit-linear-gradient(top, #dc9402 0%, #f0b448 40%, #dc9402 100%); background: -moz-linear-gradient(top, #dc9402 0%, #f0b448 40%, #dc9402 100%); background: -o-linear-gradient(top, #dc9402 0%, #f0b448 40%, #dc9402 100%); background: linear-gradient(top, #dc9402 0%, #f0b448 40%, #dc9402 100%); -webkit-box-shadow: 0px 1px 4px #a2a64d; -moz-box-shadow: 0px 1px 4px #a2a64d; box-shadow: 0px 1px 4px #a2a64d; border-radius: 0; cursor: pointer; position: relative; }
+  body.skey.results.mobile-wide #question-nav > .instructions h5::after { border-color: #fff; border-style: solid; border-width: 3px 3px 0 0; color: #fff; content: " \a0"; display: inline-block; height: 9px; position: absolute; right: 12px; top: 15px; vertical-align: middle; width: 9px; -webkit-transform: rotate(-45deg); -moz-transform: rotate(-45deg); -ms-transform: rotate(-45deg); -o-transform: rotate(-45deg); transform: rotate(-45deg); }
   body.skey.results.mobile-wide #question-nav .choices, body.skey.results.mobile-wide #question-nav .actions { position: static; }
   body.skey.results.mobile-wide #question-nav .scroll { border: 0; border-bottom: 1px solid #c3d941; height: auto; overflow: visible; width: 100%; }
   body.skey.results.mobile-wide #question-nav .section { clear: left; }
@@ -1022,8 +1023,13 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results.mobile-wide #question-nav .option-list .option { cursor: pointer; display: block; position: relative; }
   body.skey.results.mobile-wide #question-nav .option-list .option::after { border-color: #000; border-style: solid; border-width: 2px 2px 0 0; color: #000; content: " \a0"; display: inline-block; height: 8px; position: absolute; right: 8px; top: 2px; vertical-align: middle; width: 8px; -webkit-transform: rotate(45deg); -moz-transform: rotate(45deg); -ms-transform: rotate(45deg); -o-transform: rotate(45deg); transform: rotate(45deg); }
   body.skey.results.mobile-wide #question-nav .option-list .name { font-size: 11px; margin: 0; }
+  body.skey.results.mobile-wide #question-nav .option-list .answered .value { display: inline-block; line-height: 14px; padding-top: 8px; }
   body.skey.results.mobile-wide #question-nav .option-list .clear-filter { width: 50%; }
   body.skey.results.mobile-wide .working-area .close { float: left; padding-right: 12px; }
+  body.skey.results.mobile-wide .working-area .values.numeric { font-size: 12px; line-height: 14px; margin-top: 18px; }
+  body.skey.results.mobile-wide .working-area .measurement { margin: 18px 0; }
+  body.skey.results.mobile-wide .working-area .measurement input[type='text'] { margin-right: 10px; width: 60px; }
+  body.skey.results.mobile-wide .working-area .measurement label { padding-right: 10px; }
   body.skey.results.mobile-wide .species-count-heading { position: relative; text-align: center; top: -2px; width: 80%; }
   body.skey.results.mobile-gloss { /* Styles for mobile variants where working- area glossary terms are shown in a list */ }
   body.skey.results.mobile-gloss .working-area h4 { padding-right: 50px; }
