Hide the filter Clear button on small screens.
An extra tap is now required to Clear a single filter on
small screens, but the row now only does one thing: opens
the working area. This simpler behavior may be better
than piling an additional option into the row for small
screens. (#308)

--- a/gobotany/static/sass/_simplekey.scss
+++ b/gobotany/static/sass/_simplekey.scss
@@ -1614,7 +1614,7 @@ ul.get-more-questions-menu {
                         padding-top: 8px;
                     }
                     .clear-filter {
-                        width: 50%;
+                        display: none;
                     }
                 } /* end .option-list */
             } /* end #question-nav */
