--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -1024,7 +1024,7 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results.mobile-wide #question-nav .option-list .option::after { border-color: #000; border-style: solid; border-width: 2px 2px 0 0; color: #000; content: " \a0"; display: inline-block; height: 8px; position: absolute; right: 8px; top: 2px; vertical-align: middle; width: 8px; -webkit-transform: rotate(45deg); -moz-transform: rotate(45deg); -ms-transform: rotate(45deg); -o-transform: rotate(45deg); transform: rotate(45deg); }
   body.skey.results.mobile-wide #question-nav .option-list .name { font-size: 11px; margin: 0; }
   body.skey.results.mobile-wide #question-nav .option-list .answered .value { display: inline-block; line-height: 14px; padding-top: 8px; }
-  body.skey.results.mobile-wide #question-nav .option-list .clear-filter { width: 50%; }
+  body.skey.results.mobile-wide #question-nav .option-list .clear-filter { display: none; }
   body.skey.results.mobile-wide .working-area .close { float: left; padding-right: 12px; }
   body.skey.results.mobile-wide .working-area .values.numeric { font-size: 12px; line-height: 14px; margin-top: 18px; }
   body.skey.results.mobile-wide .working-area .measurement { margin: 18px 0; }
