--- a/gobotany/simplekey/templates/concord/results.html
+++ b/gobotany/simplekey/templates/concord/results.html
@@ -41,7 +41,7 @@
                 <div id="question-nav" class="closed">
 
                     <div class="section instructions">
-                        <h5>Questions (<span>0</span> answered)</h5>
+                        <h5>Questions <span></span></h5>
                     </div>
                     <div class="scroll">
                       <div class="loading">Loading questions…</div>
