--- a/gobotany/site/templates/concord/_header.html
+++ b/gobotany/site/templates/concord/_header.html
@@ -5,11 +5,11 @@
             {% if page = "home" %}
                 <h1>Concord Flora: Go Botany</h1>
                 <p class="site-name"><b>Concord Flora</b>
-                    <i>brief partner site tagline here</i></p>
+                    <i>plants of Concord, Massachusetts</i></p>
             {% else %}
-                <p class="go-botany">{% nav_item 'Go Botany: Discover thousands of New England plants' site-home %}</p>
-                <p class="site-name"><b>{% nav_item 'Partner Site Sample' site-home %}</b>
-                    <i>brief partner site tagline here</i></p>
+                <p class="go-botany">{% nav_item 'Go Botany' site-home %}</p>
+                <p class="site-name"><b>{% nav_item 'Concord Flora' site-home %}</b>
+                    <i>plants of Concord, Massachusetts</i></p>
             {% endif %}
             <p class="newfs"><a href="http://www.newenglandwild.org/">New
                 England Wild Flower Society</a></p>
