Remove a few text strings from 'partner' sample templates.
Remove strings that were used to verify that templates were being
overridden as expected, but that would typically not be used for
an actual partner site. (#396)

--- a/gobotany/simplekey/templates/partner/pilegroup.html
+++ b/gobotany/simplekey/templates/partner/pilegroup.html
@@ -23,7 +23,7 @@
                     </ul>
                 </div>
                 
-                <h1>(Partner) {{ pilegroup.friendly_title|lower|capfirst }}</h1>
+                <h1>{{ pilegroup.friendly_title|lower|capfirst }}</h1>
 
                 <p class="question">{{ subgroups_list_page.main_heading }}</p>
                 <p class="tip">Please go through the subgroups in order.</p>
