--- a/gobotany/simplekey/templates/partner/results.html
+++ b/gobotany/simplekey/templates/partner/results.html
@@ -33,7 +33,7 @@
                         </ul>
                     </div>
 
-                    <h1>(Partner) {{ subgroup_results_page.main_heading|capfirst }}</h1>
+                    <h1>{{ subgroup_results_page.main_heading|capfirst }}</h1>
 
                 </div>
 
