--- a/gobotany/site/templates/partner/getting_started.html
+++ b/gobotany/site/templates/partner/getting_started.html
@@ -9,7 +9,7 @@
 {% block body_attributes %}id="getting-started" class="help"{% endblock %}
 
 {% block main_content %}
-    <h1>Partner: Getting Started with the Simple Key</h1>
+    <h1>Getting Started with the Simple Key</h1>
 
     <div class="first question">
         <h2>What kinds of plants can I identify?</h2>
