Remove more unneeded strings from 'partner' templates. (#396)

--- a/gobotany/site/templates/partner/glossary.html
+++ b/gobotany/site/templates/partner/glossary.html
@@ -15,7 +15,7 @@
 {% block body_attributes %}id="glossary" class="help"{% endblock %}
 
 {% block main_content %}
-    <h1>Partner: Glossary: {{ this_letter|upper }}</h1>
+    <h1>Glossary: {{ this_letter|upper }}</h1>
     <ul id="alphabet">
         {% for letter in letters %}
             {% if letter = this_letter %}
