--- a/gobotany/site/templates/partner/help.html
+++ b/gobotany/site/templates/partner/help.html
@@ -9,7 +9,7 @@
 {% block body_attributes %}id="help" class="help"{% endblock %}
 
 {% block main_content %}
-    <h1>Partner: Help</h1>
+    <h1>Help</h1>
 
     <p>Here is an overview of help resources available for the site.</p>
 
