Concord flora template edits.
More minor edits. Removed the indicator word "partner" from templates.

--- a/gobotany/site/templates/concord/_primary_navigation.html
+++ b/gobotany/site/templates/concord/_primary_navigation.html
@@ -2,6 +2,7 @@
 
     <li class="home">{% nav_item 'Home' site-home %}</li>
     <li class="simple">{% nav_item 'Simple Key' level1 'simple' %}</li>
+    <li class="home">{% nav_item 'Go Bot' level1 'simple' %}</li>
     {% comment %}
     Omit a bunch of sections for this partner site.
     {% if dev_features %}
