--- a/gobotany/simplekey/templates/concord/pilegroup.html
+++ b/gobotany/simplekey/templates/concord/pilegroup.html
@@ -23,7 +23,7 @@
                     </ul>
                 </div>
                 
-                <h1>(Partner) {{ pilegroup.friendly_title|lower|capfirst }}</h1>
+                <h1>{{ pilegroup.friendly_title|lower|capfirst }}</h1>
 
                 <p class="question">{{ subgroups_list_page.main_heading }}</p>
                 <p class="tip">Please go through the subgroups in order.</p>
