--- a/gobotany/site/templates/concord/advanced_map.html
+++ b/gobotany/site/templates/concord/advanced_map.html
@@ -10,7 +10,7 @@
 
 {% block main_content %}     
 <div>
-    <h1>Partner: Advanced Map to Groups</h1>
+    <h1>Advanced Map to Groups</h1>
     <h2>For a shortcut through the plant groups, you can start here.</h1>
 
     <div id="plant-map-list">
