--- a/gobotany/taxa/templates/concord/family.html
+++ b/gobotany/taxa/templates/concord/family.html
@@ -25,7 +25,7 @@ Family: {{ family.name }} {% if common_name %}({{ common_name|cut:"The "|lower }
 {% block body_attributes %}id="family" class="taxa"{% endblock %}
 
 {% block main_content %}
-                <h1>Partner: Family: {{ family.name }}</h1>
+                <h1>Family: {{ family.name }}</h1>
                 {% if common_name %}
                     <p class="common">{{ common_name|cut:"The "|lower }}</p>
                 {% endif %}
