Concord flora template edits.
Minor changes to home and help pages.

--- a/gobotany/site/templates/concord/advanced_map.html
+++ b/gobotany/site/templates/concord/advanced_map.html
@@ -89,8 +89,8 @@
 
     <h2>About Plant Groups and Subgroups</h2>
 
-    <p>The boxes above show how we have grouped over 3,000 New
-    England plants into six major categories, which we call
+    <p>The boxes above show how we have grouped over 1,200
+    plants in Concord, Massachusetts, into six major categories, which we call
     <em>groups.</em> These groups contain smaller subsets of species we
     have organized into <em>subgroups.</em> These are not scientific
     categories, but rather groupings of superficially similar plants that
