--- a/gobotany/site/templates/concord/getting_started.html
+++ b/gobotany/site/templates/concord/getting_started.html
@@ -13,8 +13,8 @@
 
     <div class="first question">
         <h2>What kinds of plants can I identify?</h2>
-        <p>The Go Botany Simple Key helps you identify thousands of
-        native and naturalized plant species in New England. You can also
+        <p>The <strong>Go Botany Concord Flora</strong> Simple Key helps you identify thousands of
+        native and naturalized plant species in Concord, Massachusetts. You can also
         identify subspecies and varieties. Many of these plants grow outside
         of New England, though, so this key is useful well beyond our
         region.</p>
