--- a/gobotany/site/templates/concord/home.html
+++ b/gobotany/site/templates/concord/home.html
@@ -33,7 +33,8 @@
                     <h2>Simple ID Key</h2>
                     <img src="/static/images/layout/separator.png"
                         alt="Go Botany">
-                    <p>Want to know what that plant is? With the Concord Flora Simple Key,
+                    <p>Want to know what that plant is? With the 
+						<strong>Go Botany Concord Flora</strong> Simple Key,
                     you can identify over 1,200 common native and naturalized
                     New England plants! Observe closely, collect a sample or
                     take a photo, answer some questions, and narrow down to
