Concord flora template edits.
Minor edit to the header. (#392)

--- a/gobotany/site/templates/concord/_header.html
+++ b/gobotany/site/templates/concord/_header.html
@@ -5,11 +5,11 @@
             {% if page = "home" %}
                 <h1>Concord Flora: Go Botany</h1>
                 <p class="site-name"><b>Concord Flora</b>
-                    <i>plants of Concord, Massachusetts</i></p>
+                    <i>Discover the plants of Concord, Massachusetts</i></p>
             {% else %}
                 <p class="go-botany">{% nav_item 'Go Botany' site-home %}</p>
                 <p class="site-name"><b>{% nav_item 'Concord Flora' site-home %}</b>
-                    <i>plants of Concord, Massachusetts</i></p>
+                    <i>Discover the plants of Concord, Massachusetts</i></p>
             {% endif %}
             <p class="newfs"><a href="http://www.newenglandwild.org/">New
                 England Wild Flower Society</a></p>
