Copy-fit the home page Simple Key text.
We needed one fewer line. (#392)

--- a/gobotany/site/templates/concord/home.html
+++ b/gobotany/site/templates/concord/home.html
@@ -35,7 +35,7 @@
                         alt="Go Botany">
                     <p>Want to know what that plant is? With the 
 						<strong>Go Botany Concord Flora</strong> Simple Key,
-                    you can identify over 1,200 common native and naturalized
+                    you can identify over 1,200 common
                     New England plants! Observe closely, collect a sample or
                     take a photo, answer some questions, and narrow down to
                     the correct identification.</p>
