Concord flora template edits.
Changed the title.

--- a/gobotany/site/templates/concord/_base.html
+++ b/gobotany/site/templates/concord/_base.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <title>{% block title %}{% endblock %}{% block title_suffix %}:
-            Partner Site Sample{% endblock %}</title>
+            Go Botany Concord Flora{% endblock %}</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,
         initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
