Concord flora template edits.
Modified footer. (#392)

--- a/gobotany/site/templates/concord/_footer.html
+++ b/gobotany/site/templates/concord/_footer.html
@@ -13,7 +13,7 @@
                     180 Hemenway Road, Framingham, MA 01701</p>
                 </div>
                 <div class="navigation">
-                    <h6>Partner Site Sample
+                    <h6>Concord Flora
                         (Go Botany [{% gobotany_version %}])</h6>
                     <ul id="footer-nav" class="sections">
                         {% include "concord/_primary_navigation.html" %}
