--- a/gobotany/site/templates/concord/home.html
+++ b/gobotany/site/templates/concord/home.html
@@ -34,7 +34,7 @@
                     <img src="/static/images/layout/separator.png"
                         alt="Go Botany">
                     <p>Want to know what that plant is? With the 
-						<strong>Go Botany Concord Flora</strong> Simple Key,
+                    Go Botany Concord Flora <b>Simple Key</b>,
                     you can identify over 1,200 common
                     New England plants! Observe closely, collect a sample or
                     take a photo, answer some questions, and narrow down to
@@ -76,6 +76,23 @@
             </div>
             {% endcomment %}
             <div class="three-col"></div>
+
+            <div class="intro">
+                <p>This <b>Go Botany Concord Flora</b> web site contains a
+                comprehensive list of the <b>plants of Concord,
+                Massachusetts</b>, and is a customized version of Go Botany.
+                To learn about all of the plants of New England, visit the main
+                <a href="http://gobotany.newenglandwild.org/">Go Botany</a>
+                web site.</p>
+
+                <p><a href="http://www.ray-a.com/">Ray Angelo</a> kindly
+                provided the list of Concord plants, with additional
+                contributions by Bryan Connolly and Chuck Davis. The
+                Nomenclature is from <a 
+                href="http://www.newenglandwild.org/store/flora-novae-angliae/">Flora
+                Novae Angliae</a>, by Arthur Haines, Research Botanist,
+                New England Wild Flower Society.</p>
+            </div>
 
             <div id="potd">
             {% if plant_of_the_day %}
