Fix partner site name in footer. (#392)

--- a/gobotany/site/templates/concord/_footer.html
+++ b/gobotany/site/templates/concord/_footer.html
@@ -13,8 +13,7 @@
                     180 Hemenway Road, Framingham, MA 01701</p>
                 </div>
                 <div class="navigation">
-                    <h6>Partner Site Sample
-                        (Go Botany [{% gobotany_version %}])</h6>
+                    <h6>Go Botany Concord Flora [{% gobotany_version %}]</h6>
                     <ul id="footer-nav" class="sections">
                         {% include "concord/_primary_navigation.html" %}
                     </ul>
