Concord flora template edits.
Home page copy edits. (#392)

--- a/gobotany/site/templates/concord/home.html
+++ b/gobotany/site/templates/concord/home.html
@@ -85,13 +85,21 @@
                 <a href="http://gobotany.newenglandwild.org/">Go Botany</a>
                 web site.</p>
 
-                <p><a href="http://www.ray-a.com/">Ray Angelo</a> kindly
-                provided the list of Concord plants, with additional
-                contributions by Bryan Connolly and Chuck Davis. The
-                Nomenclature is from <a 
-                href="http://www.newenglandwild.org/store/flora-novae-angliae/">Flora
-                Novae Angliae</a>, by Arthur Haines, Research Botanist,
-                New England Wild Flower Society.</p>
+                <p><a href="http://www.ray-a.com/">Ray Angelo</a> former 
+				Curator of Vascular Plants for the 
+				<a href="http://www.rhodora.org/">New England Botanical Club</a>, 
+				kindly provided the list of Concord plants, with additional 
+				contributions by Bryan Connolly, Massachusetts State Botanist,
+				and Charles Davis, Curator of Vascular Plants at Harvard University 
+				Department of Organismic and Evolutionary Biology.</p>
+
+				
+				<p>The nomenclature is from 
+				<a href="http://www.newenglandwild.org/store/flora-novae-angliae/">Flora
+                Novae Angliae</a> by Arthur Haines, Research Botanist at
+                New England Wild Flower Society. Flora Novae Angliae is the first 
+				comprehensive scientific reference on the region's plant species 
+				published in the last 25 years.</p>
             </div>
 
             <div id="potd">
